@@ -14,6 +14,10 @@ include::enviro.txt[]
 
 include::options.txt[]
 
+=== Parameters
+
+include::params.txt[]
+
 === Configuration
 
 include::config.txt[]
