@@ -1,3 +1,7 @@
+126
+-- pulled latest from tom
+-- added paramaters to doc reference section
+
 125
 -- discovered can't catch exceptions thrown from Lua to C++; need to
    build liblua differently
